--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/learn-co-curriculum/redux-dispatch/issues"
   },
-  "homepage": "https://github.com/learn-co-curriculum/redux-dispatch#readme"
+  "homepage": "https://github.com/learn-co-curriculum/redux-dispatch#readme",
+  "dependencies": {
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.5.0"
+  }
 }
